Making more progress on modularizing the whole system--maybe a second pass will be in order after this one?