@@ -1,3 +1,6 @@
+import java.io.IOException;
+import java.time.Instant;
+
 /*** Main.java ****************************************************************\
  * Author:         twisted_nematic57                                          *
  * Date Created:   2025-11-26                                                 *
@@ -6,27 +9,20 @@
  *                 solutions using reflection.                                *
 \******************************************************************************/
 
-import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.time.Instant;
-import java.util.List;
-import java.util.stream.Stream;
-
 public class Main {
   static void main(String[] args) throws Exception {
-    // Arg (singular) will look like this: "yYYYY_dXXpY_Z[BN[...]]"
-    //  * YYYY is the year
-    //  * XX is the day (always 2 digits)
-    //  * Y is the part number (always == 1 or 2)
-    //  * Z is the test number (always 1 digit)
-    //  * If the letter "B" is present after Z, we need to benchmark the solution N times, where N
-    //    is an integer in the range [0, (2^31)-1].
+    // Arg (singular) will look like this: "{Platform}.{Specifier}-Z[BN[...][S]]"
+    //  * {Platform} is a valid Java package name. It is the name of the platform that hosted the programming problem
+    //    to which the solution is implemented. Supported values: "AdventOfCode", "LeetCode", "ProjectEuler",
+    //    "Codeforces", "AtCoder", "SPOJ", "UVa".
+    //  * {Specifier} is a valid Java class name. It is the name of the class in which there is a main method which we
+    //    must execute. It should be the same as the identifier for the problem that the solution is written for.
+    //  * Z is the test number (always 1 digit, 0-9)
+    //  * If the letter B is present after Z, we need to benchmark the solution N times, where N is an integer in the
+    //    range [0, (2^31)-1].
+    //  * If the letter S is at the end and B is also present, benchmark timing data will be saved to a CSV in ./inputs.
 
-    // TODO: later when benchmarking code is factored out, pass this as an arg to a method in BenchmarkReporter
-    boolean saveBenchResultsToCSV;
+    final boolean saveBenchResultsToCSV;
     if(args[0].contains("S")) { // We must save benchmark results to CSV
       saveBenchResultsToCSV = true;
       args[0] = args[0].replace("S", ""); // To make code down the line look a little cleaner
@@ -34,6 +30,105 @@ public class Main {
       saveBenchResultsToCSV = false;
     }
 
+    final int testNum = Integer.parseInt(args[0].substring(args[0].indexOf("-")+1, args[0].indexOf("-")+2));
+    final boolean benchmarking = args[0].contains("B");
+    final String platformName = args[0].substring(0, args[0].indexOf("."));
+
+    try {
+      if(!benchmarking) { // Not benchmarking, running only once
+        SolutionSpecifier thisSolution = new SolutionSpecifier(
+            args[0].substring(args[0].indexOf(".") + 1, args[0].indexOf("-")),
+            testNum
+        );
+        long runtime = 0; // in nanoseconds
+        switch (platformName) {
+          case "AdventOfCode":
+            AdventOfCodePlatformHandler thisProblem = new AdventOfCodePlatformHandler();
+            String[] input = thisProblem.loadInput(thisSolution);
+            runtime = thisProblem.runSolution(thisSolution); // Possible runtime exception for this is handled.
+
+            // The solution will be responsible for printing its own output.
+            break;
+          case "LeetCode":
+            break;
+          case "ProjectEuler":
+            break;
+          case "CodeForces":
+            break;
+          case "AtCoder":
+            break;
+          case "SPOJ":
+            break;
+          case "UVa":
+            break;
+        }
+
+        System.out.println("\n---------------------------------------------------");
+        System.out.printf("Runtime: %.1f μs / %.3f ms", UnitConverter.ns_us(runtime), UnitConverter.ns_ms(runtime));
+
+      } else { // Benchmarking mode
+
+        int benchmarkingIterations = Integer.parseInt(args[0].substring(args[0].indexOf("B") + 1));
+        SolutionSpecifier thisSolution = new SolutionSpecifier(
+            args[0].substring(args[0].indexOf(".") + 1, args[0].indexOf("-")),
+            testNum
+        );
+        long[] benchmarkRuntimes = new long[benchmarkingIterations];
+
+        switch (platformName) {
+          case "AdventOfCode":
+            AdventOfCodePlatformHandler thisProblem = new AdventOfCodePlatformHandler();
+            String[] input = thisProblem.loadInput(thisSolution);
+
+
+            benchmarkRuntimes = thisProblem.benchmarkSolution(thisSolution, benchmarkingIterations);
+
+            // If we're supposed to save the data to a CSV, then save it
+            try {
+              if(saveBenchResultsToCSV) {
+                long now = Instant.now().getEpochSecond(); // Current Unix timestamp
+                BenchmarkReporter.saveToCSV(benchmarkRuntimes, now);
+                System.out.println("Benchmark results saved to runtimes_" + now + ".csv in inputs directory.\n");
+              }
+            } catch (IOException e) {
+              System.out.println("Error: Couldn't save benchmark results to CSV. Error details:\n" + e.getMessage() + "\n");
+            }
+
+            break;
+          case "LeetCode":
+            break;
+          case "ProjectEuler":
+            break;
+          case "CodeForces":
+            break;
+          case "AtCoder":
+            break;
+          case "SPOJ":
+            break;
+          case "UVa":
+            break;
+        }
+
+        // Make an array of length 80% of benchmarkRuntimes
+        long[] benchmarkRuntimes_last80p = new long[(int)(Math.ceil(benchmarkRuntimes.length*0.8))];
+        // Copy the last 80% of elements of benchmarkRuntimes to benchmarkRuntimes_last80p
+        System.arraycopy(benchmarkRuntimes, (int)(Math.floor(benchmarkRuntimes.length*0.2)), benchmarkRuntimes_last80p, 0, benchmarkRuntimes_last80p.length);
+
+        // Compute statistical variables on our runtime data
+        Statistics allRuns = new Statistics(benchmarkRuntimes);
+        Statistics last80p = new Statistics(benchmarkRuntimes_last80p);
+
+        // Print the pretty stats table
+        BenchmarkReporter.showBenchmarkResults(allRuns, last80p);
+      }
+    } catch(IOException e) {
+      System.out.println("\nError: The input file was not found. \n\nError details:\n" + e.getMessage());
+    } catch(Exception e) {
+      System.out.println("\nError: Failed to run the solution. If you are in IntelliJ IDEA, try clicking anywhere in the" +
+          "solution source code window and try again. \n\nError details:\n" + e.getMessage());
+    }
+
+    /*
     if(!args[0].contains("B")) { // --- RUNNING SOLUTION ONCE ---
       long runtime = RunSolution(
           Integer.parseInt(args[0].substring(1, 5)),       // Year
@@ -45,7 +140,7 @@ public class Main {
         System.out.println("\n---------------------------------------------------");
         System.out.printf("Runtime: %.3f ms", UnitConverter.ns_ms(runtime));
       } else {
-        System.out.println("\nSomething went wrong and the solution couldn't be run. Are you sure the specified problem exists?");
+        System.out.println("\nThe solution couldn't be run. Are you sure the specified solution exists?");
       }
     } else { // --- BENCHMARKING ---
       System.out.println("Initializing benchmarking...");
@@ -88,89 +183,6 @@ public class Main {
       } else {
         System.out.println("\nThe solution couldn't be run. Are you sure the specified solution exists?");
       }
-    }
-  }
-
-
-  // Runs a specific solution on a certain input (test #).
-  //  year,day,part: specifies the specific solution to run
-  //  test: specifies the test # to run. If == 0, runs the solution on official input from
-  //        adventofcode.com. In range [0,9]
-  // RETURNS: the amount of time in nanoseconds the solution took to execute
-  public static long RunSolution(int year, int day, int part, int test) throws ClassNotFoundException, NoSuchMethodException, InvocationTargetException, IllegalAccessException {
-    if(problemDoesntExist(year, day, part, test)) { // Input validation
-      return -1;
-    }
-
-    // Load input for the problem and testcase.
-    List<String> input = loadInput(year, day, part, test);
-
-    // Do some voodoo to be able to call the solution's main method
-    Class<?> solutionClass = Class.forName(String.format("y%d_d%02dp%d", year, day, part));
-    Method solutionMain = solutionClass.getMethod("main", List.class, boolean.class);
-
-    // Call the solution and time it.
-    long tickStart = System.nanoTime();
-    solutionMain.invoke(null, input, true); // 'true' means the solution will print output
-    return System.nanoTime() - tickStart; // Return execution time of entire solution
-  }
-
-  // Same as RunSolution, except this one mutes the solutions' printing output and runs them many (`iterations`) times
-  // RETURNS: an array containing the amount of time each iteration took to run in nanoseconds
-  public static long[] BenchmarkSolution(int year, int day, int part, int test, int iterations) throws ClassNotFoundException, NoSuchMethodException, InvocationTargetException, IllegalAccessException {
-    if(problemDoesntExist(year, day, part, test) || iterations < 1) { // Input validation
-      return new long[] {-1};
-    }
-
-    // Load input for the problem and testcase.
-    List<String> input = loadInput(year, day, part, test);
-
-    // Do some reflection voodoo to be able to call the solution's main method
-    Class<?> solutionClass = Class.forName(String.format("y%d_d%02dp%d", year, day, part));
-    Method solutionMain = solutionClass.getMethod("main", List.class, boolean.class);
-    solutionMain.setAccessible(true); // Make reflection-based method calling faster (you SHOULD NOT BE USING --add-opens)
-
-    long[] execTimes = new long[iterations];
-    for(int i = 0; i < iterations; i++) { // Run the solution `iterations` times and record execution time of each iteration
-      long tickStart = System.nanoTime();
-      solutionMain.invoke(null, input, false); // 'false': Making the solution itself print stuff will needlessly slow things down, so don't for benchmarking
-      execTimes[i] = System.nanoTime() - tickStart;
-
-      // Print the amount of time this iteration took to execute in both milliseconds and microseconds as both may be useful.
-      // The format string left-aligns the iteration number integer, then pads it to the max number of digits any iteration # will have.
-      System.out.printf("Iteration " +
-          String.format("%-" + Integer.toString(iterations).length() + "d", i + 1) +
-          ": %.3f ms / %.1f µs\n", UnitConverter.ns_ms(execTimes[i]), UnitConverter.ns_us(execTimes[i]));
-    }
-
-    return execTimes; // Return array of all execution times
-  }
-
-  // Checks if the specified problem does not exist.
-  // RETURNS: true if problem DOES NOT exist, false if it DOES (false is what we _want_)
-  public static boolean problemDoesntExist(int year, int day, int part, int test) {
-    //  * This project is designed to contain solutions to years 2015-2025
-    //  * Years before 2025 have 25 problems per year; >= 2025 have 12 problems/year
-    //  * Each problem always has 2 parts
-    //  * There can be up to 10 valid values of `test` for each solution, where test 0 means to run it on official input from adventofcode.com.
-    return year < 2015 || year > 2025 || day < 1 || (year < 2025 ? day > 25 : day > 12) || (part != 1 && part != 2) || test < 0 || test > 9;
-  }
-
-  // Loads input from a file into a List<String>
-  // RETURNS: the List<String> containing input
-  public static List<String> loadInput(int year, int day, int part, int test) {
-    // Input filename format: input_YYYY_DD_P_T.txt where YYYY is the year, DD is a two-digit day #,
-    // P is the part number (always 1 or 2), and T is the one-digit test number. If T == 0, it runs
-    // the solution on actual input and not a test.
-    List<String> input = List.of(); // Empty list
-    try (Stream<String> lines = Files.lines(
-        Path.of(String.format("input_%d_%02d_%d_%d.txt", year, day, part, test)))) {
-      input = lines.toList();
-    } catch (IOException e) {
-      System.out.println("\n" + e.getMessage());
-      System.out.println("\nFATAL ERROR: The input file was not found.");
-    }
-
-    return input;
+    }*/
   }
 }
